--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="logo">
-            <img src="imgs/Mygames.png" alt="MyGames Logo">
+            <img src="imgs/Mygames.webp" alt="MyGames Logo">
         </div>
         <div class="hamburger">
             <span></span>
@@ -39,28 +39,28 @@
                 id: 1,
                 title: "2048",
                 description: "Classic number puzzle game - combine tiles to reach 2048!",
-                image: "imgs/2048.png",
+                image: "imgs/2048.webp",
                 link: "2048/index.html"
             },
             {
                 id: 2,
                 title: "Snake",
                 description: "Strategic puzzle game that will challenge your mind.",
-                image: "imgs/snake.png",
+                image: "imgs/snake.webp",
                 link: "Snake/index.html"
             },
             {
                 id: 3,
                 title: "Two-Balls",
                 description: "Action-packed racing game with multiple tracks.",
-                image: "imgs/Two-Balls.png",
+                image: "imgs/Two-Balls.webp",
                 link: "Two-Balls/index.html"
             },
             {
                 id: 4,
                 title: "TypeQuest",
                 description: "Multiplayer battle arena with various characters.",
-                image: "imgs/TypeQuest.png",
+                image: "imgs/TypeQuest.webp",
                 link: "TypeQuest/index.html"
             },
         ];
