--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="logo">
-            <img src="imgs/Mygames.webp" alt="MyGames Logo" id="logoImage">
+            <img src="imgs/MyGames.webp" alt="MyGames Logo" id="logoImage">
         </div>
         <div class="theme-toggle">
             <button id="themeToggle">
