--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         link.style.color = '#ffffff';
                     });
                 } else {
-                    logoImage.src = 'imgs/Mygames.webp';
+                    logoImage.src = 'imgs/MyGames.webp';
                     themeIcon.src = 'imgs/moon.webp';
                     // Update text colors for light mode
                     navLinks.forEach(link => {
