--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body class="light-mode">
     <!-- Navigation Bar -->
+    <!-- Navigation Bar -->
     <nav>
         <div class="logo">
             <img src="imgs/MyGames.webp" alt="MyGames Logo" id="logoImage">
@@ -106,7 +107,7 @@
 
     function updateThemeImages(theme) {
         if (theme === 'dark') {
-            logoImage.src = 'imgs/MyGamesD.webp';  // Ensure this image exists
+            logoImage.src = 'imgs/MyGamesDark.webp';  // Ensure this image exists
             themeIcon.src = 'imgs/sun.webp';
             // Update text colors for dark mode
             navLinks.forEach(link => {
