--- a/index.html
+++ b/index.html
@@ -40,35 +40,42 @@
 
     <script>
         const games = [
-            {
-                id: 1,
-                title: "2048",
-                description: "Classic number puzzle game - combine tiles to reach 2048!",
-                image: "imgs/2048.webp",
-                link: "2048/index.html"
-            },
-            {
-                id: 2,
-                title: "Snake",
-                description: "Strategic puzzle game that will challenge your mind.",
-                image: "imgs/snake.webp",
-                link: "Snake/index.html"
-            },
-            {
-                id: 3,
-                title: "Two-Balls",
-                description: "Action-packed racing game with multiple tracks.",
-                image: "imgs/Two-Balls.webp",
-                link: "Two-Balls/index.html"
-            },
-            {
-                id: 4,
-                title: "TypeQuest",
-                description: "Multiplayer battle arena with various characters.",
-                image: "imgs/TypeQuest.webp",
-                link: "TypeQuest/index.html"
-            },
-        ];
+    {
+        id: 1,
+        title: "2048",
+        description: "Combine tiles to reach 2048 in this classic number puzzle game.",
+        image: "imgs/2048.webp",
+        link: "2048/index.html"
+    },
+    {
+        id: 2,
+        title: "Snake",
+        description: "Control a snake, eat food, and avoid colliding with walls or itself.",
+        image: "imgs/snake.webp",
+        link: "Snake/index.html"
+    },
+    {
+        id: 3,
+        title: "Two-Balls",
+        description: "Race with two balls (red and black). Click the red ball three times and fail.",
+        image: "imgs/Two-Balls.webp",
+        link: "Two-Balls/index.html"
+    },
+    {
+        id: 4,
+        title: "TypeQuest",
+        description: "A multiplayer typing battle game with various characters.",
+        image: "imgs/TypeQuest.webp",
+        link: "TypeQuest/index.html"
+    },
+    {
+        id: 5,
+        title: "TicTacToe",
+        description: "Classic multiplayer Tic-Tac-Toe, form lines to win.",
+        image: "imgs/TicTacToe.webp",
+        link: "TicTacToe/index.html"
+    }
+];
 
         function createGameCards() {
             const gameGrid = document.getElementById('gameGrid');
