--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
         description: "Classic multiplayer Tic-Tac-Toe, form lines to win.",
         image: "imgs/TicTacToe.webp",
         link: "TicTacToe/index.html"
+    },
+    {
+        id: 6,
+        title: "Brick Blast",
+        description: "a type of brick-breaking game where players aim to clear levels by shooting a ball to demolish bricks",
+        image: "imgs/Brick-Blast.webp",
+        link: "Brick-Blast/index.html"
     }
 ];
 
