air hocky added

--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
         image: "imgs/Brick-Blast.webp",
         link: "Brick-Blast/index.html"
     }
+    ,
+    {
+        id: 7,
+        title: "Air Hocky",
+        description: "Air hockey game apps offer a digital rendition of the classic tabletop game, allowing players to engage in fast-paced, competitive gameplay on their mobile devices.",
+        image: "imgs/Air-Hocky.webp",
+        link: "Air-Hocky/index.html"
+    }
 ];
 
         function createGameCards() {
