--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
         description: "Air hockey game apps offer a digital rendition of the classic tabletop game, allowing players to engage in fast-paced, competitive gameplay on their mobile devices.",
         image: "imgs/Air-Hocky.webp",
         link: "Air-Hocky/index.html"
+    },
+    {
+        id: 8,
+        title: "Chess",
+        description: "Chess is a two-player abstract strategy board game played on a square board with 64 squares, arranged in an 8x8 grid.",
+        image: "imgs/chess.webp",
+        link: "chess/index.html"
     }
 ];
 
