spin the bottle

--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
         description: "Chess is a two-player abstract strategy board game played on a square board with 64 squares, arranged in an 8x8 grid.",
         image: "imgs/chess.webp",
         link: "chess/index.html"
+    },
+    {
+        id: 9,
+        title: "Spin the bottle",
+        description: "Spin the bottle is a game where players try to guess the direction of a spinning arrow.",
+        image: "imgs/spin-the-bottle.webp",
+        link: "spin-the-bottle/index.html"
     }
 ];
 
