flappy borad added

--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
         description: "Spin the bottle is a game where players try to guess the direction of a spinning arrow.",
         image: "imgs/spin-the-bottle.webp",
         link: "spin-the-bottle/index.html"
+    },
+    {
+        id: 10,
+        title: "Flappy Bird",
+        description: "The player clicks or taps the screen to make the bird flap its wings and navigate through the pipes.",
+        image: "imgs/flappy-bird.webp",
+        link: "Flappy-Bird/index.html"
     }
 ];
 
