--- a/index.html
+++ b/index.html
@@ -137,6 +137,15 @@
         link: "Flappy-Bird/index.html",
         isApp: false
     }
+    ,
+    {
+        id: 11,
+        title: "Sudoku",
+        description: "Sudoku is a popular logic-based puzzle game that originated in Japan.",
+        image: "imgs/Sudoku.webp",
+        link: "Sudoku/index.html",
+        isApp: false
+    }
 ];
 
 document.addEventListener('DOMContentLoaded', () => {
