--- a/index.html
+++ b/index.html
@@ -294,6 +294,14 @@ document.addEventListener('DOMContentLoaded', () => {
     });
 });
 
+
+// Disable pull-to-refresh
+document.addEventListener('touchmove', (e) => {
+  if (e.touches[0].pageY > 0 && window.scrollY === 0) {
+    e.preventDefault();
+  }
+}, { passive: false });
+
     </script>
 </body>
 </html>
