--- a/chess/index.html
+++ b/chess/index.html
@@ -45,19 +45,9 @@
             </div>
         </div>
     </div>
-    <script src="js/pieces.js">
-
-        // Disable pull-to-refresh
-document.addEventListener('touchmove', (e) => {
-  if (e.touches[0].pageY > 0 && window.scrollY === 0) {
-    e.preventDefault();
-  }
-}, { passive: false });
-
-    </script>
+    <script src="js/pieces.js"></script>
     <script src="js/board.js"></script>
     <script src="js/bot.js"></script>
     <script src="js/game.js"></script>
-
 </body>
 </html>
